--- a/src/main/resources/templates/templateCursos.html
+++ b/src/main/resources/templates/templateCursos.html
@@ -17,8 +17,8 @@
             <tr>
                 <th>ID</th>
                 <th>Nombre de curso</th>
-                <th>Profesores asignados</th>
-                <th>Alumnos</th>
+                <th class="text-center">Profesores asignados</th>
+                <th class="text-center">Alumnos</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
             </tr>
