--- a/src/main/resources/templates/templateProfesores.html
+++ b/src/main/resources/templates/templateProfesores.html
@@ -18,7 +18,7 @@
                 <th>ID</th>
                 <th>Nombres</th>
                 <th>Primer Apellido</th>
-                <th>ASegundo Apellido</th>
+                <th>Segundo Apellido</th>
                 <th>Cursos Asignados</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
