--- a/src/main/resources/templates/templateCrearCurso.html
+++ b/src/main/resources/templates/templateCrearCurso.html
@@ -27,7 +27,7 @@
             </select>
         </div>
         -->
-        <div>
+        <div class="mt-3">
             <button type="submit" class="btn btn-primary">Crear Curso</button>
         </div>
     </form>
