--- a/src/main/resources/templates/templateCrearUsuario.html
+++ b/src/main/resources/templates/templateCrearUsuario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Usuario</title>
+    <title>Crear | Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -32,7 +32,7 @@
             </select>
         </div>
         <div>
-            <button type="submit" class="btn btn-primary">Crear Usuario</button>
+            <button type="submit" class="btn btn-primary mt-2">Crear Usuario</button>
         </div>
     </form>
 </section>
